--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Survey - Paddy's Pub Social Network</title>
+	<title>Slayer - Deadly Match</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Link static CSS -->
@@ -11,7 +11,7 @@
 <body>
 	<div class="container content">
 		<h1>Survey</h1>
-		<p>Take a quick survey to find your perfect match! These questions are answered by the numbers 1 through 5. If you really, really disagree with the statement, your answer would be 1. If you find a statement to hit extremely close to home, put in a 5.</p>
+		<p>This survey will show you the way to the most dangerous and exciting match you will ever meet in your final days.</p>
 		<form>
 			<div class="form-group">
 				<input id="name" type="text" class="form-control" placeholder="Name (Required)">
@@ -20,7 +20,7 @@
 				<input id="photo" type="text" class="form-control" placeholder="Link to Profile Photo (Required)">
 			</div>
 			<div class="form-group">
-				<label for="question1">I like to do janitorial work.</label>
+				<label for="question1">How many Humans, zombies have you killed, and why.</label>
 				<select class="form-control" id="question1">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -31,7 +31,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question2">I have some bird-like features (or so I've been told).</label>
+				<label for="question2">I shoot people for fun.</label>
 				<select class="form-control" id="question2">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -42,7 +42,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question3">I think very highly of myself.</label>
+				<label for="question3">I prefer the country over a city.</label>
 				<select class="form-control" id="question3">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -64,7 +64,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question5">I read as a hobby.</label>
+				<label for="question5">Do you rather kill with a gun or a knife.</label>
 				<select class="form-control" id="question5">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -75,7 +75,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question6">I am God's gift to the opposite sex.</label>
+				<label for="question6">I call them Walkers or the dead.</label>
 				<select class="form-control" id="question6">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -86,7 +86,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question7">I don't so well with the opposite sex.</label>
+				<label for="question7">I dont do well with people.</label>
 				<select class="form-control" id="question7">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -97,7 +97,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question8">I am good with money.</label>
+				<label for="question8">I Don't trust people.</label>
 				<select class="form-control" id="question8">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -108,7 +108,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question9">I work out at the gym often.</label>
+				<label for="question9">I hunt squirrels and eat them.</label>
 				<select class="form-control" id="question9">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -119,7 +119,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question10">I consider myself aggressive.</label>
+				<label for="question10">I consider myself a bad ass.</label>
 				<select class="form-control" id="question10">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -156,9 +156,9 @@
 
 	<footer>
 		<div class="container">
-			<a href="/api/friends">Discover Friends in Philly API</a>
+			<a href="/api/friends">Discover Friends in Alexandria </a>
 			<span>|</span>
-			<a href="https://github.com/yoonslee/FriendFinder">GitHub Repo</a>
+			<a href="https://github.com/Willitobai/friend_finder">GitHub Repo</a>
 		</div>
 	</footer>
 
