--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -20,7 +20,7 @@
 				<input id="photo" type="text" class="form-control" placeholder="Link to Profile Photo (Required)">
 			</div>
 			<div class="form-group">
-				<label for="question1">How many Humans, zombies have you killed, and why.</label>
+				<label for="question1">How many Humans, zombies have you killed.</label>
 				<select class="form-control" id="question1">
 					<option value="empty"></option>
 					<option value="1">1</option>
