--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Baloo|Roboto" rel="stylesheet">
 </head>
 <body>
+	<div class='survey_Img'></div><div/>
 	<div class="container content">
 		<h1>Survey</h1>
 		<p>This survey will show you the way to the most dangerous and exciting match you will ever meet in your final days Take a quick survey to find your perfect match! These questions are answered by the numbers 1 through 5. If you really, really disagree with the statement, your answer would be 1. If you find a statement to hit extremely close to home, put in a 5.</p>
