--- a/app/public/home.html
+++ b/app/public/home.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Baloo|Roboto" rel="stylesheet">
 </head>
 <body class="site">
-	<div class="container content">
+	<div class="container content home_Img">
 		<h1>Pick your death Partner</h1>
 		<p>Welcome to the exclusive new Deadly Match maker based in Alexandria VA. </p>
 		
