--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Baloo|Roboto" rel="stylesheet">
 </head>
 <body>
-	<div class='survey_Img'></div><div/>
+	<div class='survey_Img'></div><div>
 	<div class="container content">
 		<h1>Survey</h1>
 		<p>This survey will show you the way to the most dangerous and exciting match you will ever meet in your final days Take a quick survey to find your perfect match! These questions are answered by the numbers 1 through 5. If you really, really disagree with the statement, your answer would be 1. If you find a statement to hit extremely close to home, put in a 5.</p>
@@ -21,7 +21,7 @@
 				<input id="photo" type="text" class="form-control" placeholder="Link to Profile Photo (Required)">
 			</div>
 			<div class="form-group">
-				<label for="question1">How many Humans, zombies have you killed.</label>
+				<label for="question1">I've killed more humans than walkers.</label>
 				<select class="form-control" id="question1">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -32,7 +32,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question2">I shoot people for fun.</label>
+				<label for="question2">I have killed for fun.</label>
 				<select class="form-control" id="question2">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -43,7 +43,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question3">I prefer the country over a city.</label>
+				<label for="question3">I prefer the country over the city.</label>
 				<select class="form-control" id="question3">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -54,7 +54,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question4">I enjoy martial arts.</label>
+				<label for="question4"> I enjoy martial arts.</label>
 				<select class="form-control" id="question4">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -65,7 +65,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question5">Do you rather kill with a gun or a knife.</label>
+				<label for="question5">I rather kill with a gun not a knife</label>
 				<select class="form-control" id="question5">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -76,7 +76,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question6">I call them Walkers or the dead.</label>
+				<label for="question6">I call them Walkers not the dead.</label>
 				<select class="form-control" id="question6">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -87,7 +87,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question7">I dont do well with people.</label>
+				<label for="question7">I don't do well with people.</label>
 				<select class="form-control" id="question7">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -98,7 +98,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question8">I Don't trust people.</label>
+				<label for="question8">I trust people?</label>
 				<select class="form-control" id="question8">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -109,7 +109,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question9">I hunt squirrels and eat them.</label>
+				<label for="question9">I hunt at least 5 squirrels day?</label>
 				<select class="form-control" id="question9">
 					<option value="empty"></option>
 					<option value="1">1</option>
